<resources>
    <string name="app_name">Hi Hi Desktop</string>
    <string name="search">Search</string>
    <string name="setting">Set Up</string>
    <string name="wifi">WIFI</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="language">Language</string>
    <string name="date">Time</string>
    <string name="system">System</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="recommend_for_you">Recommended for you (% d)</string>
    <string name="apps">App List</string>
    <string name="netflix">Netflix</string>
    <string name="disney">Disney+</string>
    <string name="operate">operation</string>
    <string name="youtube">YouTube</string>
    <string name="app_store">App Store</string>
    <string name="recommend_city">Recommended cities (% d)</string>
    <string name="calendar_format">%02d / %02d / %02d</string>
    <string name="date_des">Week% s% 02d Month% 02d Day</string>
    <string name="place_install_app">Please install relevant apps</string>
    <string name="pojector">Projector</string>
    <string name="update">Update</string>
    <string name="tool">Tool</string>
    <string name="file_management">File Management</string>
    <string name="monday">One</string>
    <string name="tuesday">Two</string>
    <string name="wednesday">Three</string>
    <string name="thursday">Four</string>
    <string name="friday">Five</string>
    <string name="saturday">Six</string>
    <string name="sunday">Day</string>
    <string name="network">Network</string>
    <string name="keyboard">Keyboard</string>
    <string name="place_waiting">Please wait a moment</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="open">Open</string>
    <string name="uninstall">Uninstall</string>
    <string name="close">Close</string>
    <string name="version">Version:</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="upgrade">Upgrade</string>
    <string name="storage">Storage space </string>
    <string name="android_tv_os_version">Android system version</string>
    <string name="software_version">Application version</string>
    <string name="storage_total_mask">Total capacity:%. 02fGB</string>
    <string name="already_latest_version">It is already the latest version</string>
    <string name="launcher">Starter</string>
    <string name="loading">Loading</string>
    <string name="cancel">Cancel</string>
    <string name="download_progress">Downloading (%. 1f%%)</string>
    <string name="download_fail">Download failed, please try again</string>
    <string name="upgrade_now">Download completed, please click on install</string>
    <string name="tip_upgrade">Tip:% s</string>
    <string name="install">Install</string>
    <string name="retry">Retry </string>
    <string name="focus_guide">Please adjust the focus of the projector until the image is clear</string>
    <string name="next">Next Step</string>
    <string name="set_language">Set system default language</string>
    <string name="set_date">Set the current system time</string>
    <string name="set_gradient">Set projector gradient</string>
    <string name="confirm">Confirm</string>
    <string name="choose_wallpaper">Select default wallpaper</string>
    <string name="click_to_setting">Click OK to set</string>
    <string name="or_skip">Or skip execution</string>
    <string name="hulu">Hulu</string>
    <string name="max">Max</string>
    <string name="prime_video">Prime video</string>
    <string name="more">More</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Upper</string>
    <string name="down">Lower</string>
    <string name="date_picker">Date Pickers </string>
    <string name="time_picker">Time selector</string>
    <string name="year_month_day">%02d/%02d/%02d</string>
    <string name="hour_minute_second">%02d:%02d</string>
    <string name="date_time">%1$d-%2$02d-%3$02d %4$d:%5$02d</string>
    <string name="is_auto_time_toast">Automatically obtain time, not supported for setting</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="hour">Time</string>
    <string name="minute">Branch</string>
    <string name="second">Second</string>
    <string name="remote_toast_1">1. Press and hold the left and right buttons on the remote control for 3 seconds until the red light flashes to enter pairing mode</string>
    <string name="remote_toast_2">2. Pairing will automatically take place, please wait for 5 seconds</string>
    <string name="remote_toast_3">3. When prompted that pairing the remote control has been successfully completed, it is sufficient</string>
    <string name="remote_toast_4">4. If the connection is not successful, please repeat the first step and briefly press the directional key again</string>
    <string name="auto_time_title">Automatically determine date and time</string>
    <string name="set_date_title">Set Date</string>
    <string name="set_time_title">Set Time</string>
    <string name="set_netword_title">Set up system network connection</string>
    <string name="remote_control_connect">Bluetooth remote control pairing</string>
    <string name="project_crop">Screen Percent</string>
    <string name="image_mode">Picture Mode</string>
    <string name="project_gradient">Keystone Correction</string>
    <string name="project_hdmi">HDMI</string>
    <string name="project_mode">Projection Mode</string>
    <string name="long_ok_next_action">Long press the * OK key * to proceed to the next step</string>
    <string name="click_ok_changer_dir">Selecting points</string>
    <string name="click_menu_reset">Reset</string>
    <string name="vertical_dir">Vertical Direction</string>
    <string name="horizontal_dir">Horizontal Direction</string>
    <string name="edit_wifi_pass">Enter WIFI password</string>
    <string name="clean">Clean up</string>
    <string name="connect_netword">Connect to the network</string>
    <string name="connect">Connect</string>
    <string name="unsave">Cancel Save</string>
    <string name="saved_networks">Saved network</string>
    <string name="signal_low">Very weak</string>
    <string name="signal_middle">Good</string>
    <string name="signal_strong">Extremely strong</string>
    <string name="tip">Prompt</string>
    <string name="unable_to_wifi">Unable to connect to %s</string>
    <string name="connected_to_net">Connect to the Internet</string>
    <string name="ip_address">IP address</string>
    <string name="signal_strength">Signal Intensity </string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="blu_connected_fail">Bluetooth connection disconnected</string>
    <string name="blu_connected_success">Bluetooth connection successful</string>
    <string name="set_the_screen_trimming">Set screen trimming</string>
    <string name="use_website_search">Using website search</string>
    <string name="app_list">Application program</string>
    <string name="no_data">No data found</string>
    <string name="place_install">Please install %s</string>
    <string name="set_bluetooth_connected">Set up Bluetooth connection</string>
    <string name="searching">Searching</string>
    <string name="pairing_mark">Pairing% s</string>
    <string name="pairing_fail">Unable to pair% s</string>
    <string name="pairing_success">Complete pairing% s</string>
    <string name="time_display">Using a 24-hour system</string>
    <string name="sound">Voice</string>
    <string name="remote_control">Remote control</string>
    <string name="device_id">Device ID</string>
    <string name="waiting">Waiting</string>
    <string name="download_fail_mask">Download failed</string>
    <string name="install_failed">Installation failed</string>
    <string name="installed">Installation successful</string>
    <string name="installing">Installation in progress</string>
    <string name="notice">Notice</string>
    <string name="remove_notify_apk_download">Implement</string>
    <string name="remove">Remove</string>
    <string name="time_zone">Time zone</string>
    <string name="factory_reset">Restore factory settings</string>
    <string name="auto">Automatic</string>
    <string name="auto_calibration">Horizontal calibration</string>
    <string name="manual">Manual calibration</string>
    <string name="guide_group_gradient_tip_next">The correction has been completed. If adjustments are needed, please select manual; Otherwise, please select \"Next\"</string>
    <string name="guide_group_gradient_tip_done">The correction has been completed. If adjustments are needed, please select manual; Otherwise, please select \"Complete\"</string>
    <string name="manual_text">Manual</string>
    <string name="skip">Skip</string>
    <string name="manual_gradient_tip">Automatic correction has been turned off. You can enter the projection settings, select \"trapezoidal correction\", and switch it back to automatic for further use.</string>
    <string name="uninstalling">Uninstalling</string>
    <string name="uninstalled">Uninstallation successful</string>
    <string name="uninstall_failed">Uninstall Failed</string>
    <string name="done">Completed</string>
    <string name="saved">Saved</string>
    <string name="disconnect_net">Disconnect</string>
    <string name="ethernet" translatable="false">Ethernet is connected, WiFi is not available</string>
    <string name="available_updates">Available updates</string>
    <string name="No_prompt_yet">Later</string>
    <string name="Cancell">Cancel</string>
    <string name="Finish">Finish</string>
    <string name="Installation_Complete">InstallSuccess</string>
    <string name="Installation_failed">InstallFailed</string>
    <string name="Installation_Errors">InstallError</string>
    <string name="In_preparation">Preparing</string>
    <string name="download">Accepted %d%%</string>
    <string name="Download_failed">DownloadFailed</string>
    <string name="update1">Update</string>
    <string name="The_author_of_The_New_York_Times">WaitInstall</string>
    <string name="Activating">Activating...</string>
    <string name="Success">Active Success</string>
    <string name="Failed_please">Failed, please try again!</string>
    <string name="Invalid_PIN">The PIN code is invalid, please try again!</string>
    <string name="The_input">Input cannot be empty</string>
    <string name="The_author">Installing</string>
    <string name="System_activation">System activation</string>
    <string name="Please_input">Please enter the PIN code</string>
    <string name="active_the_app">Please enter the PIN code to activate the application</string>
    <string name="Activate_Now">Activate Now</string>
    <string name="app_text_15">Available updates</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_tip">Friendly Reminder: To provide the relevant services of this software, we will collect necessary user information based on the specific functional requirements of the services you use. Please carefully read the Privacy Policy and fully understand the terms of the agreement before clicking Agree. If you do not agree to the content of this Privacy Policy, it may result in certain products and/or services not functioning properly. (Only supports remote control or keyboard operation)\n\nBy clicking Agree, you indicate that you have read and agree to:</string>
    <string name="privacy_policy_link">Privacy Policy</string>
    <string name="privacy_policy_agree">Agree</string>
    <string name="privacy_policy_disagree">Disagree and Exit</string>
</resources>