<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#CC000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AuthFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/qb_px_24"
        android:text="@string/System_activation"
        android:layout_marginTop="@dimen/qb_px_25"
        android:layout_marginLeft="@dimen/qb_px_25"
        />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/ll_active"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/qb_px_22"
            android:text="@string/Please_input"
            />
        <EditText
            android:maxLength="9"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:gravity="center"
            android:textSize="@dimen/qb_px_26"
            android:textStyle="bold"
            android:id="@+id/et_active_code"
            android:layout_marginVertical="@dimen/qb_px_20"
            android:layout_width="@dimen/qb_px_350"
            android:layout_height="@dimen/qb_px_50"
            />

        <TextView
            android:layout_marginBottom="@dimen/qb_px_30"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/qb_px_16"
            android:text="@string/active_the_app"
            />

        <com.hjq.shape.view.ShapeTextView
            android:gravity="center"
            android:id="@+id/tv_active"
            android:focusable="true"
            app:shape_radius="@dimen/qb_px_8"
            android:focusableInTouchMode="true"
            android:layout_width="@dimen/qb_px_330"
            android:layout_height="wrap_content"
            android:textSize="@dimen/qb_px_16"
            android:text="@string/Activate_Now"
            app:shape_solidColor="@color/color_3D4661"
            app:shape_solidFocusedColor="@color/color_3391F5"
            app:shape_textColor="@color/color_495B87"
            app:shape_textFocusedColor="@color/white"
            android:paddingVertical="@dimen/qb_px_10"
            />

    </LinearLayout>

    <com.hjq.shape.layout.ShapeRelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_setting"
        android:layout_width="@dimen/qb_px_40"
        android:layout_height="@dimen/qb_px_40"
        android:layout_marginLeft="@dimen/qb_px_5"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/qb_px_20"
        android:layout_marginTop="@dimen/qb_px_20"
        app:shape="oval"
        app:shape_solidFocusedColor="@color/white">

        <ImageView
            android:id="@+id/setting"
            android:layout_width="@dimen/qb_px_40"
            android:layout_height="@dimen/qb_px_40"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/qb_px_5"
            android:src="@drawable/icon_setting_normal" />
    </com.hjq.shape.layout.ShapeRelativeLayout>


</RelativeLayout>

</layout>