<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.hjq.shape.layout.ShapeConstraintLayout
       app:shape_solidColor="@color/transparent"
        app:shape_radius="@dimen/qb_px_8"
        android:id="@+id/root"
        android:layout_gravity="center"
        android:layout_width="@dimen/qb_px_350"
        android:layout_height="wrap_content">
        <org.raphets.roundimageview.RoundImageView
            app:border_color="@color/transparent"
            app:type="round"
            app:corner_radius="@dimen/qb_px_8"
            android:id="@+id/blur"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:visibility="gone"
                android:text="@string/tip"
                android:textSize="@dimen/qb_px_sp_25"
                android:textColor="@color/text_color_style_1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_45"
                android:background="@color/solid_style_4"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_150">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/qb_px_10"
                    android:paddingRight="@dimen/qb_px_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="@dimen/qb_px_sp_20"
                        android:id="@+id/text"
                        android:textColor="@color/text_color_style_1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </FrameLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:padding="@dimen/qb_px_8"
                android:layout_height="@dimen/qb_px_70">
                <TextView
                    android:id="@+id/close"
                    android:text="@string/close"
                    android:textSize="@dimen/qb_px_sp_20"
                    android:background="@drawable/ripple_style_3"
                    android:textColor="@color/text_color_style_1"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="match_parent"/>
                <TextView
                    android:clickable="true"
                    android:id="@+id/remove"
                    android:text="@string/remove"
                    android:textSize="@dimen/qb_px_sp_20"
                    android:background="@drawable/ripple_style_3"
                    android:textColor="@color/text_color_style_1"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/retry"
                    android:text="@string/retry"
                    android:textSize="@dimen/qb_px_sp_20"
                    android:background="@drawable/ripple_style_3"
                    android:textColor="@color/text_color_style_1"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="match_parent"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.hjq.shape.layout.ShapeConstraintLayout>
</FrameLayout>